--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 
 TODO
-- libreoffice oxt : make XML/XCU files content dynamic, using config.sh variables.
+- libreoffice oxt : make XCU file content dynamic (language code).
