--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+= Resources for Lojban spell cheking
+Resources to generate Lojban spell check dictionaries for various software. This doesn't contain the actual useable dictionaries.
+Please visit https://github.com/Sukender/lojban-spell-check-dist to get the dictionaries/installers/packages.
 
-TODO
-- libreoffice oxt : make XCU file content dynamic (language code).
+These are ultra-basic dictionaries for Lojban, based on ANSI characters (~= latin alphabet).
+The result is clearly simplistic, of poor quality, and maybe inaccurate. But still better than nothing!
+
+To do:
+ - libreoffice oxt : make XCU file content dynamic (language code).
